Login conectado y direccionamiento a usuarios

--- a/Angular/proyectoFinal/angular.json
+++ b/Angular/proyectoFinal/angular.json
@@ -92,8 +92,10 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/sweetalert2/src/sweetalert2.scss",
               "src/styles.css"
             ],
+            
             "scripts": []
           }
         }
