--- a/Angular/proyectoFinal/package.json
+++ b/Angular/proyectoFinal/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/uuid": "^9.0.1",
     "ng2-cookies": "^1.0.12",
-    "ngx-cookie-service": "^15.0.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.2",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
