--- a/Angular/proyectoFinal/package.json
+++ b/Angular/proyectoFinal/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "file-saver": "^2.0.5",
     "ng2-cookies": "^1.0.12",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.8",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^14.2.3",
     "@angular/cli": "~14.2.3",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
     "@types/uuid": "^9.0.1",
     "jasmine-core": "~4.3.0",
