--- a/Angular/proyectoFinal/package.json
+++ b/Angular/proyectoFinal/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "file-saver": "^2.0.5",
