--- a/Laravel/proyectoFinal/composer.json
+++ b/Laravel/proyectoFinal/composer.json
@@ -11,7 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
-        "tymon/jwt-auth": "^2.0"
+        "tymon/jwt-auth": "1.*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
